testing mobile overflow issue pls

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -9,7 +9,7 @@ header {
         transition: ease all .5s;
     }
     h1 {
-        width: 100%;
+        // width: 100%;
         transition: ease all .5s;
         overflow: hidden; /* Ensures the content is not revealed until the animation */
         border-right: .3rem solid orange; /* The typwriter cursor */
