--- a/styles/sass/partials/_media_queries.scss
+++ b/styles/sass/partials/_media_queries.scss
@@ -30,7 +30,8 @@
         margin:50px 0;
         .wrapper {
             .project-list{
-                margin-left: 50px;
+                padding-left: 20px;
+                opacity: 1;
                 h3 {
                 font-size: 1.5rem;
                     &:hover,&:focus, &:active {
@@ -44,7 +45,11 @@
                 input:checked + label {   
                     color:black;    
                 }
+                
             }
+            .project-image {
+                    display: none;
+                }
             
         }
     }
